<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AvailabilityActivity">

    <TextView
        android:id="@+id/tvMyAvailablity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:gravity="center_horizontal"
        android:text="My Availablity Status"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/swAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:scaleX="2"
        android:scaleY="2" />

    <TextView
        android:id="@+id/tvContInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/contractor_info"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/accept" />

        <Button
            android:id="@+id/btnReject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/reject" />

        <ImageButton
            android:id="@+id/ibCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/call" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This layout needs to be changed"
        android:textSize="24sp" />

</LinearLayout>